I know that iOS are impacted of a bug in a page on Safari (tested iOS  17.3), I'm working on it

--- a/track.css
+++ b/track.css
@@ -1,5 +1,4 @@
 body {
-    /* overflow: hidden; */
     background-color: black;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
@@ -39,7 +38,7 @@ p {
 
 .cover img {
     width: 40%;
-    display: block;
+    /* display: block; */
     border-radius: 25px;
 }
 
